--- a/frontend/src/components/template/Logo.css
+++ b/frontend/src/components/template/Logo.css
@@ -10,3 +10,9 @@ aside.logo img {
   width: 100%;
   height: var(--logo-height);
 }
+
+@media(max-width: 576px) {
+  aside.logo img {
+    width: 350px;
+  }
+}
